deploy/overlays/local/node-vitala/components/terminology-server-proxy-gateway/terminology-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: vitala-terminology-server-proxy-gateway
  namespace: dh-health
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: terminology.vitala.local.dh.unimaas.nl
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vitala-terminology-server-proxy-route
  namespace: dh-health
spec:
  parentRefs:
    - name: vitala-terminology-server-proxy-gateway
  hostnames:
    - terminology.vitala.local.dh.unimaas.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vitala-terminology-server-proxy
          port: 8080
